# numsa

./: .codecov.yml  CMakeLists.txt  README.md  fpm.toml  meson.build  meson_options.txt  smd_h2o
.github/workflows/: build.yml
app/: CMakeLists.txt  main.f90  meson.build
config/: CMakeLists.txt  config.cmake.in  install-mod.py  meson.build
config/modules/: Findmctc-lib.cmake  Findtest-drive.cmake  numsa-utils.cmake  xtb-utils.cmake
man/: numsa.1.adoc
src/: CMakeLists.txt  meson.build  numsa.f90  sdm.f90  smd.f90
src/numsa/: CMakeLists.txt  data.f90  lebedev.f90  meson.build  output.f90  search.f90  surface.f90  version.f90
src/sdm/: cds.f90  init.f90  sigma.f90
src/smd/: CMakeLists.txt  cds.f90  init.f90  io.f90  meson.build  output.f90  sigma.f90
test/: CMakeLists.txt  main.f90  meson.build  smd_h2o  test_cds.f90  test_surface.f90
